--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "bootstrap": "^5.3.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
