--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.9.3",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
